# DocGeniusLite

./: .gitignore  api.py  app.py  auth.py  db.py  docgenius.db  document_generator.py  init_database.py  landing_page.jsx  landing_styles.css  payments.py  pyproject.toml  rai.py  replit.nix  requirements.txt  styles.css  utils.py
.streamlit/: config.toml
attached_assets/: PRD-DocGeniusLite.docx
pages/: 0_Dashboard.py  1_Generate_Document.py  2_Document_History.py  3_Account.py  4_Help_&_Support.py  landing.py  login.py  onboarding.py
templates/: __init__.py  invoice_template.py  letter_of_intent_template.py  nda_template.py  proposal_template.py  scope_of_work_template.py
utils/: __init__.py  auth.py  document.py  sidebar.py  styles.py
